--- a/version_1/pom.xml
+++ b/version_1/pom.xml
@@ -22,7 +22,7 @@
         <version.plugin.enforcer>1.3.1</version.plugin.enforcer>
         <version.plugin.war>2.4</version.plugin.war>
         <version.plugin.jgitflow>1.0-m3</version.plugin.jgitflow>
-        <version.plugin.wildfly>1.1.0.Alpha1</version.plugin.wildfly>
+        <version.plugin.wildfly>1.1.0.Alpha4</version.plugin.wildfly>
 
         <!-- Dependencies -->
         <version.dependency.javaee>7.0</version.dependency.javaee>
@@ -85,6 +85,9 @@
                 <groupId>org.wildfly.plugins</groupId>
                 <artifactId>wildfly-maven-plugin</artifactId>
                 <version>${version.plugin.wildfly}</version>
+                <configuration>
+                    <jboss-home>/home/meastman/wildfly-9.0.2.Final/</jboss-home>
+                </configuration>
             </plugin>
         </plugins>
     </build>
