--- a/version_10/pom.xml
+++ b/version_10/pom.xml
@@ -70,6 +70,12 @@
             <version>4.5.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>args4j</groupId>
+            <artifactId>args4j</artifactId>
+            <version>2.32</version>
+            <scope>test</scope>
+        </dependency>
         <!--WebJars-->
         <dependency>
             <groupId>org.webjars</groupId>
